; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/faraday/extr_ftmac100.c_ftmac100_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/faraday/extr_ftmac100.c_ftmac100_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ftmac100 = type { i64, %struct.net_device* }
%struct.net_device = type { i32 }

@FTMAC100_MACCR_SW_RST = common dso_local global i32 0, align 4
@FTMAC100_OFFSET_MACCR = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"software reset failed\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ftmac100*)* @ftmac100_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftmac100_reset(%struct.ftmac100* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ftmac100*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ftmac100* %0, %struct.ftmac100** %3, align 8
  %7 = load %struct.ftmac100*, %struct.ftmac100** %3, align 8
  %8 = getelementptr inbounds %struct.ftmac100, %struct.ftmac100* %7, i32 0, i32 1
  %9 = load %struct.net_device*, %struct.net_device** %8, align 8
  store %struct.net_device* %9, %struct.net_device** %4, align 8
  %10 = load i32, i32* @FTMAC100_MACCR_SW_RST, align 4
  %11 = load %struct.ftmac100*, %struct.ftmac100** %3, align 8
  %12 = getelementptr inbounds %struct.ftmac100, %struct.ftmac100* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @FTMAC100_OFFSET_MACCR, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @iowrite32(i32 %10, i64 %15)
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %35, %1
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %18, 5
  br i1 %19, label %20, label %38

20:                                               ; preds = %17
  %21 = load %struct.ftmac100*, %struct.ftmac100** %3, align 8
  %22 = getelementptr inbounds %struct.ftmac100, %struct.ftmac100* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @FTMAC100_OFFSET_MACCR, align 8
  %25 = add nsw i64 %23, %24
  %26 = call i32 @ioread32(i64 %25)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @FTMAC100_MACCR_SW_RST, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %20
  %32 = call i32 @udelay(i32 500)
  store i32 0, i32* %2, align 4
  br label %43

33:                                               ; preds = %20
  %34 = call i32 @udelay(i32 1000)
  br label %35

35:                                               ; preds = %33
  %36 = load i32, i32* %5, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %5, align 4
  br label %17

38:                                               ; preds = %17
  %39 = load %struct.net_device*, %struct.net_device** %4, align 8
  %40 = call i32 @netdev_err(%struct.net_device* %39, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %41 = load i32, i32* @EIO, align 4
  %42 = sub nsw i32 0, %41
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %38, %31
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @iowrite32(i32, i64) #1

declare dso_local i32 @ioread32(i64) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @netdev_err(%struct.net_device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
